lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx9070xt.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 1259,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "current_mclk_range": {
            "max": 1259,
            "min": 97
          },
          "current_sclk_range": {
            "max": null,
            "min": null
          },
          "od_range": {
            "curve_sclk_points": [],
            "curve_voltage_points": [],
            "mclk": {
              "max": 1500,
              "min": 97
            },
            "sclk": null,
            "sclk_offset": {
              "max": 1000,
              "min": -500
            },
            "voltage_offset": {
              "max": 0,
              "min": -200
            }
          },
          "sclk_offset": 0,
          "vddc_curve": [],
          "voltage_offset": -50
        },
        "kind": "rdna"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "asic_name": "GFX1201",
      "chip_class": "GFX12",
      "compute_units": 64,
      "device_name": "AMD Radeon RX 9070 XT",
      "family_id": 152,
      "family_name": "GC 12.0.0",
      "isa": "gfx1201",
      "memory_info": {
        "cpu_accessible_total": 17095983104,
        "cpu_accessible_used": 1525264384,
        "resizeable_bar": true
      },
      "pci_revision_id": 192,
      "rop_info": {
        "operations_count": 128,
        "operations_factor": 8,
        "unit_count": 16
      },
      "vram_bit_width": 256,
      "vram_clock_ratio": 2.0,
      "vram_max_bw": "644",
      "vram_type": "GDDR6",
      "vram_vendor": "samsung"
    },
    "flags": [
      "DumpableVBios",
      "HasPmfw",
      "ConfigurableFanControl"
    ],
    "link_info": {
      "current_speed": "32.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Navi 48 [Radeon RX 9070/9070 XT/9070 GRE]",
        "model_id": "7550",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "PowerColor Hellhound/Reaper/Red Devil RX 9070 XT",
        "model_id": "2435",
        "vendor": "Tul Corporation / PowerColor",
        "vendor_id": "148C"
      }
    },
    "vbios_version": "113-EXT109069-101",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Navi 48 [Radeon RX 9070/9070 XT/9070 GRE]",
      "model_id": "7550",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "PowerColor Hellhound/Reaper/Red Devil RX 9070 XT",
      "model_id": "2435",
      "vendor": "Tul Corporation / PowerColor",
      "vendor_id": "148C"
    }
  },
  "power_profile_modes": {
    "active": 0,
    "modes": {
      "0": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "BOOTUP_DEFAULT"
      },
      "1": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5570560,
              -655,
              -6553
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "3D_FULL_SCREEN"
      },
      "2": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              3,
              0,
              5898240,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -65536,
              -6553
            ]
          }
        ],
        "name": "POWER_SAVING"
      },
      "3": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              500,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "VIDEO"
      },
      "4": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              4,
              600,
              1,
              0,
              4587520,
              -16384,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "VR"
      },
      "5": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              4,
              600,
              1,
              0,
              4587520,
              -16384,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "COMPUTE"
      },
      "6": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "CUSTOM"
      },
      "7": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5570560,
              -655,
              -6553
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "WINDOW_3D"
      }
    },
    "value_names": [
      "FPS",
      "MinActiveFreqType",
      "MinActiveFreq",
      "BoosterFreqType",
      "BoosterFreq",
      "PD_Data_limit_c",
      "PD_Data_error_coeff",
      "PD_Data_error_rate_coeff"
    ]
  },
  "power_states": {
    "core": [
      {
        "enabled": true,
        "id": "Sleep",
        "value": 19
      },
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 615
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 800
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 888
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 1000
      }
    ],
    "vram": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 96
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 456
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 772
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 875
      },
      {
        "enabled": true,
        "id": {
          "Index": 4
        },
        "value": 1124
      },
      {
        "enabled": true,
        "id": {
          "Index": 5
        },
        "value": 1258
      }
    ]
  },
  "stats": {
    "active_power_states": {
      "core": "Sleep",
      "memory": {
        "Index": 5
      },
      "pcie": {
        "Index": 1
      }
    },
    "busy_percent": 3,
    "clockspeed": {
      "gpu_clockspeed": 167,
      "sensors": {},
      "vram_clockspeed": 1258
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {
        "acoustic_limit": {
          "allowed_range": [
            500,
            3650
          ],
          "current": 3300
        },
        "acoustic_target": {
          "allowed_range": [
            500,
            3650
          ],
          "current": 1000
        },
        "minimum_pwm": {
          "allowed_range": [
            30,
            100
          ],
          "current": 30
        },
        "target_temp": {
          "allowed_range": [
            25,
            105
          ],
          "current": 92
        },
        "zero_rpm_enable": false,
        "zero_rpm_temperature": {
          "allowed_range": [
            50,
            110
          ],
          "current": 67
        }
      },
      "pwm_current": 81,
      "pwm_max": 254,
      "pwm_min": 76,
      "speed_current": 896,
      "speed_max": 3650,
      "speed_min": 0,
      "temperature_range": [
        25,
        100
      ]
    },
    "performance_level": "auto",
    "power": {
      "average": 55.0,
      "cap_current": 120.0,
      "cap_default": 304.0,
      "cap_max": 340.0,
      "cap_min": 0.0
    },
    "temps": {
      "edge": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 42.0,
        "display_only": false,
        "primary": true
      },
      "junction": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 45.0,
        "display_only": false,
        "primary": true
      },
      "mem": {
        "crit": 108.0,
        "crit_hyst": -273.1499938964844,
        "current": 68.0,
        "display_only": false,
        "primary": true
      }
    },
    "voltage": {
      "gpu": 552,
      "sensors": {}
    },
    "vram": {}
  }
}
