lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__vangogh.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": null,
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "cache_info": {
        "Amd": [
          [
            {
              "cu_count": 1,
              "level": 1,
              "size": 16384,
              "types": [
                "Data"
              ]
            },
            8
          ],
          [
            {
              "cu_count": 2,
              "level": 1,
              "size": 16384,
              "types": [
                "Data"
              ]
            },
            4
          ],
          [
            {
              "cu_count": 2,
              "level": 1,
              "size": 32768,
              "types": [
                "Instruction"
              ]
            },
            4
          ],
          [
            {
              "cu_count": 8,
              "level": 1,
              "size": 131072,
              "types": [
                "Data"
              ]
            },
            1
          ],
          [
            {
              "cu_count": 8,
              "level": 2,
              "size": 1048576,
              "types": [
                "Data"
              ]
            },
            1
          ]
        ]
      },
      "vram_clock_ratio": 1.0
    },
    "flags": [],
    "link_info": {
      "current_speed": "8.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "VanGogh [AMD Custom GPU 0405]",
        "model_id": "163F",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model_id": "0123",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      }
    },
    "vbios_version": "113-AMDAerithJ-005",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "VanGogh [AMD Custom GPU 0405]",
      "model_id": "163F",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model_id": "0123",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    }
  },
  "power_profile_modes": null,
  "power_states": {
    "core": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 200
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 1100
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 1600
      }
    ],
    "vram": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 400
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 600
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 687
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 687
      }
    ]
  },
  "stats": {
    "active_power_states": {
      "core": {
        "Index": 0
      }
    },
    "busy_percent": 0,
    "clockspeed": {
      "gpu_clockspeed": 200,
      "sensors": {}
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {}
    },
    "power": {
      "average": 3.218,
      "cap_current": 15.0,
      "cap_default": 15.0,
      "cap_max": 29.0,
      "cap_min": 0.0,
      "current": 4.057
    },
    "temps": {
      "edge": {
        "crit": null,
        "crit_hyst": null,
        "current": 56.0,
        "display_only": false,
        "primary": true
      }
    },
    "voltage": {
      "gpu": 15,
      "sensors": {
        "northbridge": 669
      }
    },
    "vram": {}
  }
}
